--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "tools/*",
     "docs/reference",
     "tools/@types/*",
-    "tests/*"
+    "tests/*",
+    "tests/affine-cloud/*"
   ],
   "engines": {
     "node": "<23.0.0"
