--- a/packages/backend/server/package.json
+++ b/packages/backend/server/package.json
@@ -12,9 +12,11 @@
     "dev": "nodemon ./src/index.ts",
     "dev:mail": "email dev -d src/mails",
     "test": "ava --concurrency 1 --serial",
-    "test:copilot": "ava \"src/__tests__/**/copilot-*.spec.ts\"",
+    "test:copilot:e2e": "ava \"src/__tests__/**/copilot-*.e2e.ts\"",
+    "test:copilot:spec": "ava \"src/__tests__/**/copilot-*.spec.ts\"",
     "test:coverage": "c8 ava --concurrency 1 --serial",
-    "test:copilot:coverage": "c8 ava --timeout=5m \"src/__tests__/**/copilot-*.spec.ts\"",
+    "test:copilot:e2e:coverage": "c8 ava --timeout=5m \"src/__tests__/**/copilot-*.e2e.ts\"",
+    "test:copilot:spec:coverage": "c8 ava --timeout=5m \"src/__tests__/**/copilot-*.spec.ts\"",
     "data-migration": "cross-env NODE_ENV=development r ./src/data/index.ts",
     "predeploy": "yarn prisma migrate deploy && node --import ./scripts/register.js ./dist/data/index.js run",
     "postinstall": "prisma generate"
