--- a/packages/frontend/apps/electron/package.json
+++ b/packages/frontend/apps/electron/package.json
@@ -62,6 +62,7 @@
     "electron-squirrel-startup": "1.0.1",
     "electron-window-state": "^5.0.3",
     "esbuild": "^0.25.0",
+    "execa": "^9.5.2",
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
     "lodash-es": "^4.17.21",
