--- a/blocksuite/affine/all/package.json
+++ b/blocksuite/affine/all/package.json
@@ -18,7 +18,8 @@
     "@blocksuite/global": "workspace:*",
     "@blocksuite/inline": "workspace:*",
     "@blocksuite/store": "workspace:*",
-    "@blocksuite/sync": "workspace:*"
+    "@blocksuite/sync": "workspace:*",
+    "@blocksuite/affine-shared": "workspace:*"
   },
   "exports": {
     ".": "./src/index.ts",
@@ -38,7 +39,9 @@
     "./inline/types": "./src/inline/types.ts",
     "./blocks": "./src/blocks/index.ts",
     "./blocks/schemas": "./src/blocks/schemas.ts",
-    "./sync": "./src/sync/index.ts"
+    "./sync": "./src/sync/index.ts",
+    "./shared": "./src/shared/index.ts",
+    "./shared/*": "./src/shared/*.ts"
   },
   "typesVersions": {
     "*": {
@@ -89,6 +92,12 @@
       ],
       "sync": [
         "dist/sync/index.d.ts"
+      ],
+      "shared": [
+        "dist/shared/index.d.ts"
+      ],
+      "shared/*": [
+        "dist/shared/*.d.ts"
       ]
     }
   },
