--- a/blocksuite/affine/block-database/package.json
+++ b/blocksuite/affine/block-database/package.json
@@ -25,6 +25,7 @@
     "@blocksuite/store": "workspace:*",
     "@floating-ui/dom": "^1.6.13",
     "@lit/context": "^1.1.2",
+    "@vanilla-extract/css": "^1.17.0",
     "@preact/signals-core": "^1.8.0",
     "@toeverything/theme": "^1.1.12",
     "@types/mdast": "^4.0.4",
