--- a/.docker/selfhost/compose.yml
+++ b/.docker/selfhost/compose.yml
@@ -53,7 +53,7 @@ services:
     restart: unless-stopped
 
   postgres:
-    image: postgres:16
+    image: postgres:${DB_VERSION:-16}
     container_name: postgres
     volumes:
       - ${DB_DATA_LOCATION}:/var/lib/postgresql/data
