--- a/tools/cli/package.json
+++ b/tools/cli/package.json
@@ -27,6 +27,7 @@
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "cssnano": "^7.0.6",
+    "dotenv": "^16.4.7",
     "html-webpack-plugin": "^5.6.3",
     "inquirer": "^12.3.0",
     "jsonc-parser": "^3.3.1",
