--- a/packages/common/error/tsconfig.json
+++ b/packages/common/error/tsconfig.json
@@ -1,14 +1,10 @@
 {
   "extends": "../../../tsconfig.web.json",
-  "include": ["./src"],
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
     "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
   },
-  "references": [
-    { "path": "../debug" },
-    { "path": "../env" },
-    { "path": "../error" }
-  ]
+  "include": ["./src"],
+  "references": []
 }
