--- a/packages/frontend/graphql/tsconfig.json
+++ b/packages/frontend/graphql/tsconfig.json
@@ -8,6 +8,7 @@
   },
   "references": [
     { "path": "../../common/debug" },
-    { "path": "../../common/env" }
+    { "path": "../../common/env" },
+    { "path": "../../common/error" }
   ]
 }
