--- a/packages/backend/native/Cargo.toml
+++ b/packages/backend/native/Cargo.toml
@@ -13,6 +13,7 @@ file-format   = { workspace = true }
 napi          = { workspace = true, features = ["async"] }
 napi-derive   = { workspace = true }
 rand          = { workspace = true }
+regex         = { workspace = true }
 sha3          = { workspace = true }
 tiktoken-rs   = { workspace = true }
 v_htmlescape  = { workspace = true }
